// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Save and Discard buttons but not translation dialog when new dashboard (no dashboard id) 1`] = `
<div>
  <div
    class="editBar"
    data-test="edit-control-bar"
  >
    <div
      class="controls"
    >
      <div
        class="jsx-1994200789 start"
        data-test="dhis2-uicore-buttonstrip"
      >
        <div
          class="jsx-1994200789 box"
        >
          <span
            class="span"
          >
            <button
              class="jsx-441677069 primary"
              data-test="save-dashboard-button"
              type="button"
            >
              Save changes
            </button>
          </span>
        </div>
        <div
          class="jsx-1994200789 box"
        >
          <span
            class="span"
          >
            <button
              class="jsx-441677069 "
              data-test="dhis2-uicore-button"
              type="button"
            >
              Print preview
            </button>
          </span>
        </div>
        <div
          class="jsx-1994200789 box"
        >
          <span
            class="span"
          >
            <button
              class="jsx-441677069 "
              data-test="dhis2-uicore-button"
              type="button"
            >
              Filter settings
            </button>
          </span>
        </div>
        <div
          class="jsx-1994200789 box"
        />
        <div
          class="jsx-1994200789 box"
        />
      </div>
      <button
        class="jsx-441677069 secondary"
        data-test="dhis2-uicore-button"
        type="button"
      >
        Exit without saving
      </button>
    </div>
  </div>
  <div
    class="mock-filter-settings-dialog"
  />
  
  
</div>
`;

exports[`renders Translate, Delete, and Discard buttons when delete access 1`] = `
<div>
  <div
    class="editBar"
    data-test="edit-control-bar"
  >
    <div
      class="controls"
    >
      <div
        class="jsx-1994200789 start"
        data-test="dhis2-uicore-buttonstrip"
      >
        <div
          class="jsx-1994200789 box"
        >
          <span
            class="span"
          >
            <button
              class="jsx-441677069 primary"
              data-test="save-dashboard-button"
              type="button"
            >
              Save changes
            </button>
          </span>
        </div>
        <div
          class="jsx-1994200789 box"
        >
          <span
            class="span"
          >
            <button
              class="jsx-441677069 "
              data-test="dhis2-uicore-button"
              type="button"
            >
              Print preview
            </button>
          </span>
        </div>
        <div
          class="jsx-1994200789 box"
        >
          <span
            class="span"
          >
            <button
              class="jsx-441677069 "
              data-test="dhis2-uicore-button"
              type="button"
            >
              Filter settings
            </button>
          </span>
        </div>
        <div
          class="jsx-1994200789 box"
        >
          <span
            class="span"
          >
            <button
              class="jsx-441677069 "
              data-test="dhis2-uicore-button"
              type="button"
            >
              Translate
            </button>
          </span>
        </div>
        <div
          class="jsx-1994200789 box"
        >
          <span
            class="span"
          >
            <button
              class="jsx-441677069 "
              data-test="delete-dashboard-button"
              type="button"
            >
              Delete
            </button>
          </span>
        </div>
      </div>
      <button
        class="jsx-441677069 secondary"
        data-test="dhis2-uicore-button"
        type="button"
      >
        Exit without saving
      </button>
    </div>
  </div>
  <div
    class="mock-filter-settings-dialog"
  />
  <div
    class="mock-translation-dialog"
  />
</div>
`;

exports[`renders only the Go to Dashboards button when no update access 1`] = `
<div>
  <div
    class="editBar"
    data-test="edit-control-bar"
  >
    <div
      class="controls"
    >
      <button
        class="jsx-441677069 secondary"
        data-test="dhis2-uicore-button"
        type="button"
      >
        Go to dashboards
      </button>
    </div>
  </div>
</div>
`;

exports[`renders the ActionsBar without Delete when no delete access 1`] = `
<div>
  <div
    class="editBar"
    data-test="edit-control-bar"
  >
    <div
      class="controls"
    >
      <div
        class="jsx-1994200789 start"
        data-test="dhis2-uicore-buttonstrip"
      >
        <div
          class="jsx-1994200789 box"
        >
          <span
            class="span"
          >
            <button
              class="jsx-441677069 primary"
              data-test="save-dashboard-button"
              type="button"
            >
              Save changes
            </button>
          </span>
        </div>
        <div
          class="jsx-1994200789 box"
        >
          <span
            class="span"
          >
            <button
              class="jsx-441677069 "
              data-test="dhis2-uicore-button"
              type="button"
            >
              Print preview
            </button>
          </span>
        </div>
        <div
          class="jsx-1994200789 box"
        >
          <span
            class="span"
          >
            <button
              class="jsx-441677069 "
              data-test="dhis2-uicore-button"
              type="button"
            >
              Filter settings
            </button>
          </span>
        </div>
        <div
          class="jsx-1994200789 box"
        >
          <span
            class="span"
          >
            <button
              class="jsx-441677069 "
              data-test="dhis2-uicore-button"
              type="button"
            >
              Translate
            </button>
          </span>
        </div>
        <div
          class="jsx-1994200789 box"
        />
      </div>
      <button
        class="jsx-441677069 secondary"
        data-test="dhis2-uicore-button"
        type="button"
      >
        Exit without saving
      </button>
    </div>
  </div>
  <div
    class="mock-filter-settings-dialog"
  />
  <div
    class="mock-translation-dialog"
  />
</div>
`;
